test/errors/scope-resolution/redefinition/parenless-and-parenful-fns.chpl
module M {
  proc foo { }
  proc foo(x: int) { }

  foo(1);
}
